# AI-Debugger

./: Software Debugger.html
Tools/AI-Debugger-Python/tools/suspect-main/: CONTRIBUTING.md  Makefile  PLUGIN_GUIDE.md  README.md  pyproject.toml  pytest.ini
Tools/AI-Debugger-Python/tools/suspect-main/docs/: mbfl_explained.md  presentation_flows.md
Tools/AI-Debugger-Python/tools/suspect-main/examples/third_party_plugin/: README.md  pyproject.toml  third_party_plugin.py
Tools/AI-Debugger-Python/tools/suspect-main/rich_sample_project/: __init__.py  algos.py  bank.py  conftest.py  datastructures.py  demo_half.py  graphs.py  math_extra.py  mbfl_demo_methods.py  pytest.ini  shopping.py  sorting.py  strings.py  test_all.py  test_coverage_all.py  test_datastructures.py  test_graphs.py  test_math_extra.py  test_shopping.py  test_sorting.py  test_strings.py  toggle_failures.py
Tools/AI-Debugger-Python/tools/suspect-main/scripts/: clean_suspect_artifacts.py  md_to_docx.py  pytest_junit_wrapper.py
Tools/AI-Debugger-Python/tools/suspect-main/sus-rsp/: artifact_manifest.json  suspect.events.jsonl
Tools/AI-Debugger-Python/tools/suspect-main/suspect/: __main__.py  artifacts.py  cache.py  cleanup.py  cli.py  mapping.py  matrix.py  observability.py  orchestrator.py  plugins.py  utils.py
Tools/AI-Debugger-Python/tools/suspect-main/tests/: test_cleanup.py  test_cli_helpers.py  test_cli_integration_endtoend.py  test_cli_integration_package.py  test_formulas_sbfl.py  test_junit_parser.py  test_mapping_and_matrix.py  test_mbfl_formula.py  test_mbfl_integration_midscore.py
(+38 files in other folders)
